# fastapi-my-test-app

./: README.md  fastapi-my-test-app.code-workspace
backend/: create_table.py  main.py  pyproject.toml
backend/api/: auth.py  router.py
backend/api/db/: db.py
backend/api/db/models/: common.py  task.py  user.py
backend/api/endpoints/: admin.py  register.py  test_api.py
backend/api/templates/: admin.html  complete.html  layout.html  register.html  test.html
