[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["HIR0-728 <70585820+HIR0-728@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
sqlalchemy = "^2.0.19"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "23.3.0"
isort = "5.10.1"
flake8 = "6.0.0"

[tool.black]
line-length = "88"

[tool.flake8]
max-line-length = "88"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
